FINAL CODE AMAZON

--- a/Notebooks/amazon-analysis.ipynb
+++ b/Notebooks/amazon-analysis.ipynb
@@ -67,8 +67,8 @@
    "source": [
     "# MongoDB configuration\n",
     "mongo_uri = \"mongodb://admin:adminpassword@mongodb:27017/\"\n",
-    "database_name = \"ecommerce2\"\n",
-    "collection_name = \"AMAZON2\""
+    "database_name = \"ecommerce\"\n",
+    "collection_name = \"AMAZON\""
    ]
   },
   {
