--- a/Notebooks/amazon_analysis.ipynb
+++ b/Notebooks/amazon_analysis.ipynb
@@ -258,7 +258,7 @@
    ],
    "source": [
     "# call the function in data handler to upload data\n",
-    "mongo_connection.load_data_to_mongodb('ecommerces', db_list, csv_data, collection, \"Time Stamp\" ,chunk_size=50000)\n",
+    "mongo_connection.load_data_to_mongodb('ecommerce', db_list, csv_data, collection, \"Time Stamp\" ,chunk_size=50000)\n",
     "client = collection.database.client\n",
     "db_list = client.list_database_names()\n",
     "print(\"List of databases:\", db_list)"
